# py-lingualytics

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
_sources/: index.rst.txt
datasets/CS-EN-ES-CORPUS/: README.md  all.txt  test.txt  train.txt  validation.txt
datasets/SAIL_2017/: README.md
datasets/SAIL_2017/Original_Data/: HI-EN.json
datasets/SAIL_2017/Processed_Data/Devanagari/: test.txt
datasets/SAIL_2017/Processed_Data/Romanized/: test.txt
datasets/Sub-word-LSTM/: IIITH_Codemixed.txt  IIITH_Codemixed_Processed.txt  README.md
docs/: Makefile  conf.py  index.rst
examples/: getting-started.ipynb
lingualytics/: learner.py  preprocessing.py  representation.py  stopwords.py
source/: includeme.html
