[metadata]
name = lingualytics
version = 0.1.3
description = A multilingual text analytics package.
author = Rohan Rajpal
author_email = rohan46000@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Natural Language :: English
    Topic :: Scientific/Engineering
keywords =
    text mining
    text preprocessing
    text representation
    text visualization
    codemix analytics
url = https://github.com/lingualytics/py-lingualytics
project_urls =
    Documentation = https://github.com/lingualytics/py-lingualytics/blob/master/README.md
    Source Code = https://github.com/lingualytics/py-lingualytics
    Bug Tracker = https://github.com/lingualytics/py-lingualytics/issues
[options]
packages = find:
python_requires = >=3.6.1
install_requires =
    torch>=1.6
    numpy>=1.17
    tabulate>=0.8.7
    pandas>=1.0.2
    transformers>=3.0
    tqdm>=4.48.2
    scikit_learn>=0.22
    texthero>=1.0
